[#38636] Add LC709205F Fuel Gauge

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -493,6 +493,7 @@
     <Compile Include="Peripherals\Miscellaneous\STM32L0_PWR.cs" />
     <Compile Include="Peripherals\Sensors\AS6221.cs" />
     <Compile Include="Peripherals\Sensors\MAX77818.cs" />
+    <Compile Include="Peripherals\I2C\LC709205F.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
