[#39007] Cadence_TTC: Add unit test

--- a/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
+++ b/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="OpenTitan_AES_Test.cs" />
     <Compile Include="OpenTitan_KeyManagerTest.cs" />
     <Compile Include="OpenTitan_I2C_Test.cs" />
+    <Compile Include="Cadence_TTCTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
