[#39525] Add AtCommandModem base class for Hayes-like modems

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -580,6 +580,8 @@
     <Compile Include="Utilities\RESD\RESDParser.cs" />
     <Compile Include="Peripherals\Timers\BCDHelper.cs" />
     <Compile Include="Peripherals\Timers\DateTimeWithCustomWeekday.cs" />
+    <Compile Include="Peripherals\Network\AtCommandModem.cs" />
+    <Compile Include="Peripherals\Network\AtCommandModemParsing.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
