--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -508,6 +508,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_SystemResetControl.cs" />
     <Compile Include="Peripherals\DMA\EFR32MG12_LDMA.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ScrambledMemory.cs" />
+    <Compile Include="Peripherals\Miscellaneous\OpenTitan_ClockManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
