--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -429,6 +429,7 @@
     <Compile Include="Peripherals\Storage\VirtIOBlockDevice.cs" />
     <Compile Include="Peripherals\Analog\ADCChannel.cs" />
     <Compile Include="Peripherals\MemoryControllers\OpenTitan_ROMController.cs" />
+    <Compile Include="Peripherals\MemoryControllers\OpenTitan_SRAMController.cs" />
     <Compile Include="Peripherals\CPU\ExecutionTracer\ExecutionTracer.cs" />
     <Compile Include="Peripherals\CPU\ExecutionTracer\TraceWriter.cs" />
     <Compile Include="Peripherals\CPU\ExecutionTracer\TraceFormat.cs" />
