[#39956] Micron_MT25Q: Move to GenericSpiFlash, add alias

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -512,6 +512,7 @@
     <Compile Include="Peripherals\Timers\RV8803_RTC.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ScrambledMemory.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ClockManager.cs" />
+    <Compile Include="Peripherals\SPI\GenericSpiFlash.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
