--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -513,6 +513,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ScrambledMemory.cs" />
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ClockManager.cs" />
     <Compile Include="Peripherals\SPI\GenericSpiFlash.cs" />
+    <Compile Include="Peripherals\SPI\Macronix_MX25R.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
