--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Peripherals\SPI\MPFS_QSPI.cs" />
     <Compile Include="Peripherals\SPI\CC2538_SSI.cs" />
     <Compile Include="Peripherals\SPI\Micron_MT25Q.cs" />
+    <Compile Include="Peripherals\SPI\Cypress_S25H.cs" />
     <Compile Include="Peripherals\MTD\CFIFlash.cs" />
     <Compile Include="Peripherals\UART\NS16550.cs" />
     <Compile Include="Peripherals\UART\AxiUartLite.cs" />
