[#41410] Add SpiMultiplexer model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -516,6 +516,7 @@
     <Compile Include="Peripherals\SPI\GenericSpiFlash.cs" />
     <Compile Include="Peripherals\SPI\Macronix_MX25R.cs" />
     <Compile Include="Peripherals\Network\Quectel_BC660K.cs" />
+    <Compile Include="Peripherals\SPI\SpiMultiplexer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
