[#41501] EFR32_USART: Extract generic implementation of EFR32 USART peripheral
The registers are exposed as factory methods of the EFR32_GenericUSART class,
which allows mapping them easily to different offsets on different boards.

Also switch the existing EFR32_USART peripheral to use the generic implementation.

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -517,6 +517,7 @@
     <Compile Include="Peripherals\SPI\GenericSpiFlash.cs" />
     <Compile Include="Peripherals\SPI\Macronix_MX25R.cs" />
     <Compile Include="Peripherals\Network\Quectel_BC660K.cs" />
+    <Compile Include="Peripherals\UART\SiLabs\EFR32_GenericUSART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
