[#42933] Tests: Add tests for Packet
Co-authored-by: Wojciech Meller <wmeller@antmicro.com>

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -101,6 +101,7 @@
     <Compile Include="MiscTests.cs" />
     <Compile Include="BitHelperTests.cs" />
     <Compile Include="CRCTests.cs" />
+    <Compile Include="PacketTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
