--- a/src/Emulator/Cores/cores-arm.csproj
+++ b/src/Emulator/Cores/cores-arm.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Arm\Timers\ARM_GenericTimer.cs" />
     <Compile Include="Arm\Timers\CortexAGlobalTimer.cs" />
     <Compile Include="Arm\Timers\CortexAPrivateTimer.cs" />
+    <Compile Include="Arm\ARM_GenericInterruptController.cs" />
     <Compile Include="Arm\GIC.cs" />
     <Compile Include="Arm\SnoopControlUnit.cs" />
     <Compile Include="Debug\CPUTracer.cs" />
@@ -63,6 +64,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System"/>
     <ProjectReference Include="..\Peripherals\Peripherals.csproj">
       <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
       <Name>Peripherals</Name>
