--- a/src/Emulator/Cores/cores-arm_NET.csproj
+++ b/src/Emulator/Cores/cores-arm_NET.csproj
@@ -30,6 +30,7 @@
     <Compile Include="Arm\Timers\ARM_GenericTimer.cs" />
     <Compile Include="Arm\Timers\CortexAGlobalTimer.cs" />
     <Compile Include="Arm\Timers\CortexAPrivateTimer.cs" />
+    <Compile Include="Arm\ARM_GenericInterruptController.cs" />
     <Compile Include="Arm\GIC.cs" />
     <Compile Include="Arm\SnoopControlUnit.cs" />
     <Compile Include="Debug\CPUTracer.cs" />
