--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -519,6 +519,7 @@
     <Compile Include="Peripherals\Miscellaneous\OpenTitan_ClockManager.cs" />
     <Compile Include="Peripherals\SPI\GenericSpiFlash.cs" />
     <Compile Include="Peripherals\SPI\Macronix_MX25R.cs" />
+    <Compile Include="Peripherals\Network\QuectelModem.cs" />
     <Compile Include="Peripherals\Network\Quectel_BC660K.cs" />
     <Compile Include="Peripherals\UART\SiLabs\EFR32_GenericUSART.cs" />
     <Compile Include="Peripherals\UART\EFR32xG22_USART.cs" />
