--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -521,6 +521,8 @@
     <Compile Include="Peripherals\SPI\Macronix_MX25R.cs" />
     <Compile Include="Peripherals\Network\QuectelModem.cs" />
     <Compile Include="Peripherals\Network\Quectel_BC660K.cs" />
+    <Compile Include="Peripherals\Network\Quectel_BC66.cs" />
+    <Compile Include="Peripherals\Network\Quectel_BG96.cs" />
     <Compile Include="Peripherals\UART\SiLabs\EFR32_GenericUSART.cs" />
     <Compile Include="Peripherals\UART\EFR32xG22_USART.cs" />
     <Compile Include="Peripherals\SPI\SPIMultiplexer.cs" />
