--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -584,6 +584,7 @@
     <Compile Include="Peripherals\Network\AtCommandModemParsing.cs" />
     <Compile Include="Peripherals\Network\EmulatedNetworkService.cs" />
     <Compile Include="Peripherals\Network\IEmulatedNetworkService.cs" />
+    <Compile Include="Peripherals\Network\EchoService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
