[#43059] Fix `#if PLATFORM_LINUX` (etc) conditionals in tests
We need all test csprojs to include `properties.csproj`

--- a/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
+++ b/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
@@ -10,7 +10,9 @@
     <RootNamespace>MonitorTests</RootNamespace>
     <AssemblyName>MonitorTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <PropertiesLocation>..\..\..\..\..\..\output\properties.csproj</PropertiesLocation>
   </PropertyGroup>
+  <Import Project="$(PropertiesLocation)" />
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <LangVersion>7</LangVersion>
     <DebugSymbols>true</DebugSymbols>
