[#42639] arm: Add the Security State enum

--- a/src/Emulator/Cores/cores-arm.csproj
+++ b/src/Emulator/Cores/cores-arm.csproj
@@ -41,6 +41,7 @@
   </Target>
   <Import Project="./cores.template.csproj" />
   <ItemGroup>
+    <Compile Include="Arm\ARMCommon.cs" />
     <Compile Include="Arm\Arm.cs" />
     <Compile Include="Arm\ArmRegisters.cs">
       <DependentUpon>ArmRegisters.tt</DependentUpon>
