--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Peripherals\Input\AR1021.cs" />
     <Compile Include="Peripherals\Miscellaneous\PrimeCellIDHelper.cs" />
     <Compile Include="Peripherals\SPI\STM32SPI.cs" />
+    <Compile Include="Peripherals\SPI\STM32H7_SPI.cs" />
     <Compile Include="Peripherals\Timers\CC2538Watchdog.cs" />
     <Compile Include="Peripherals\USBDeprecated\USBDeviceSpeed.cs" />
     <Compile Include="Peripherals\GPIOPort\EFMGPIOPort.cs" />
