[#42988] EthernetFrame: Extend TryCreateEthernetFrame with CRCMode

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -588,6 +588,7 @@
     <Compile Include="Peripherals\Network\EchoService.cs" />
     <Compile Include="Utilities\ICanLoadFiles.cs" />
     <Compile Include="Peripherals\Network\Clause45Address.cs" />
+    <Compile Include="Network\CRCMode.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
