--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -535,6 +535,10 @@
     <Compile Include="Peripherals\Timers\OMAP_Timer.cs" />
     <Compile Include="Peripherals\Timers\Marvell_Armada_Timer.cs" />
     <Compile Include="Peripherals\UART\CMSDK_APB_UART.cs" />
+    <Compile Include="Peripherals\Network/SynopsysDWCEthernetQualityOfService\SynopsysDWCEthernetQualityOfService.cs" />
+    <Compile Include="Peripherals\Network/SynopsysDWCEthernetQualityOfService\SynopsysDWCEthernetQualityOfService_Descriptors.cs" />
+    <Compile Include="Peripherals\Network/SynopsysDWCEthernetQualityOfService\SynopsysDWCEthernetQualityOfService_FrameAssembler.cs" />
+    <Compile Include="Peripherals\Network/SynopsysDWCEthernetQualityOfService\SynopsysDWCEthernetQualityOfService_Registers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
