[#44536] Add STM32H7_EXTI

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Peripherals\Cache\PL310.cs" />
     <Compile Include="Peripherals\IRQControllers\EXTI.cs" />
     <Compile Include="Peripherals\IRQControllers\STM32_EXTICore.cs" />
+    <Compile Include="Peripherals\IRQControllers\STM32H7_EXTI.cs" />
     <Compile Include="Peripherals\DMA\STM32DMA.cs" />
     <Compile Include="Peripherals\DMA\UDMA.cs" />
     <Compile Include="Peripherals\DMA\MPFS_PDMA.cs" />
