--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Peripherals\IRQControllers\EOSS3_IntrCtrl.cs" />
     <Compile Include="Peripherals\Cache\PL310.cs" />
     <Compile Include="Peripherals\IRQControllers\EXTI.cs" />
+    <Compile Include="Peripherals\IRQControllers\STM32F4_EXTI.cs" />
     <Compile Include="Peripherals\IRQControllers\STM32_EXTICore.cs" />
     <Compile Include="Peripherals\IRQControllers\STM32H7_EXTI.cs" />
     <Compile Include="Peripherals\DMA\STM32DMA.cs" />
