[#45214] STM32WBA_SPI: Add peripheral

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Peripherals\Miscellaneous\PrimeCellIDHelper.cs" />
     <Compile Include="Peripherals\SPI\STM32SPI.cs" />
     <Compile Include="Peripherals\SPI\STM32H7_SPI.cs" />
+    <Compile Include="Peripherals\SPI\STM32WBA_SPI.cs" />
     <Compile Include="Peripherals\Timers\CC2538Watchdog.cs" />
     <Compile Include="Peripherals\USBDeprecated\USBDeviceSpeed.cs" />
     <Compile Include="Peripherals\GPIOPort\EFMGPIOPort.cs" />
